--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -13,25 +13,35 @@
         android:gravity="center"
         android:theme="@style/AppTheme2"
         android:id="@+id/searchtoolbar"
-        android:background="#547623"
-        >
+        android:background="@color/colorPrimary">
 
 
     </androidx.appcompat.widget.Toolbar>
 
 
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchItems"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:iconifiedByDefault="false"
-        app:queryHint="Search Restaurant, food items...">
+        android:layout_margin="10dp">
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchItems"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search Restaurant, food items...">
 
 
-    </androidx.appcompat.widget.SearchView>-->
+        </androidx.appcompat.widget.SearchView>
 
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,20 +61,23 @@
             />
         <TextView
             android:id="@+id/tv_delivery_address"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:layout_margin="5dp"
             android:text="c1, monallee tower, bastola"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:maxLines="1"
 
             />
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_forward_black_24dp"
-
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_forward"
             android:layout_gravity="right"/>
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/tv_search_result_for"
         android:layout_width="match_parent"
