--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerId"
     tools:openDrawer="start">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+app:title="P-PEEP"
+        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
+        app:popupTheme="@style/Theme.AppCompat.Light"
+        android:id="@+id/ppeeptoolbar"
+        android:elevation="10dp"
+        />
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+
         android:orientation="vertical"
         android:id="@+id/layout_home_page">
 
@@ -35,6 +51,8 @@
 
 
         </com.google.android.material.tabs.TabLayout>-->
+
+
 
 
         <com.github.florent37.bubbletab.BubbleTab
@@ -61,6 +79,7 @@ android:layout_alignParentBottom="true"
 
             />
 
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerId"
             android:layout_width="match_parent"
@@ -70,8 +89,7 @@ android:layout_alignParentBottom="true"
 
     </RelativeLayout>
 
-
-
+    </LinearLayout>
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -83,4 +101,7 @@ android:layout_alignParentBottom="true"
 
     </com.google.android.material.navigation.NavigationView>
 
+
+
 </androidx.drawerlayout.widget.DrawerLayout>
+
