--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -6,29 +6,35 @@
     android:orientation="vertical"
     android:id="@+id/layout_snackbar">
 
-    <androidx.appcompat.widget.Toolbar
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        app:title="Search Food"
-        android:gravity="center"
-        android:theme="@style/AppTheme2"
-        android:id="@+id/searchtoolbar"
-        android:background="@color/colorPrimary">
-
-
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="wrap_content"
+        android:elevation="10dp">
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            app:title="Search Food"
+            app:titleTextColor="#ffcc00"
+            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
+            app:popupTheme="@style/Theme.AppCompat.Light"
+            android:id="@+id/searchtoolbar"
+            android:elevation="10dp"
+            />
+    </com.google.android.material.card.MaterialCardView>
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchItems"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+
             app:iconifiedByDefault="false"
             app:queryHint="Search Restaurant, food items...">
 
@@ -37,8 +43,50 @@
 
     </androidx.cardview.widget.CardView>
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-    <androidx.cardview.widget.CardView
+        android:layout_marginBottom="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:id="@+id/layout_map_address">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textStyle="bold"
+                android:text="Searching near"
+                android:textSize="14sp"
+
+                />
+            <TextView
+                android:id="@+id/tv_delivery_address"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:layout_margin="10dp"
+
+                android:text="c1, monallee tower, bastola"
+                android:textStyle="bold"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:maxLines="1"
+
+                />
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_forward"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+  <!--  <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
@@ -47,7 +95,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
-        android:layout_margin="10dp"
+      android:layout_marginBottom="10dp"
         android:id="@+id/layout_map_address">
         <TextView
             android:layout_width="wrap_content"
@@ -63,7 +111,7 @@
             android:id="@+id/tv_delivery_address"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:layout_margin="5dp"
             android:text="c1, monallee tower, bastola"
             android:singleLine="true"
@@ -77,12 +125,12 @@
             android:src="@drawable/ic_forward"
             android:layout_gravity="right"/>
     </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>-->
     <TextView
         android:id="@+id/tv_search_result_for"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:layout_margin="15dp"
+android:layout_marginBottom="10dp"
 
         android:text="Restaurant"
         android:textColor="#4CAF50"
