--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -12,13 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
     <com.smarteist.autoimageslider.SliderLayout
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:layout_marginBottom="20dp"
        
         android:id="@+id/imageSlider"/>
-
+        </com.google.android.material.card.MaterialCardView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,7 +64,7 @@
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:fontFamily="@font/marvinvision"
+                    android:fontFamily="@font/opensans"
                     android:textColor="#000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -104,7 +108,7 @@
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:fontFamily="@font/marvinvision"
+                    android:fontFamily="@font/gothic"
                     android:textColor="#000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -147,7 +151,7 @@
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:fontFamily="@font/marvinvision"
+                    android:fontFamily="@font/opensans"
                     android:textColor="#000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
